<resources>
    <string name="app_name">Electro Mart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Droid4</string>
    <string name="nav_header_subtitle">Droid4@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_items">Item</string>
    <string name="menu_account">Account</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_cart">Shopping Cart</string>
    <string name="menu_rating">Customer Rating</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_logout">Log Out</string>
    <string name="title_activity_item">Item</string>
    <string name="title_activity_account">Account</string>

    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_cart">Shopping Cart</string>
    <string name="title_activity_rating">Customer Rating</string>
    <string name="title_activity_contact">Contact Us</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_sign">Sign Account</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_new_user">New User</string>
    <string name="title_activity_mobile">Mobile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_laptop">Laptop</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="title_activity_buy_now">Buy Now</string>
    <string-array name="Item">
        <item> Mobile Phone </item>
        <item> Laptop </item>
        <item> Television </item>
        <item> Speaker </item>
        <item> Other Accessories </item>
    </string-array>

    <string-array name="Brand">
        <item> Asus </item>
        <item> Acer </item>
        <item> HP </item>
        <item> Samsung </item>
        <item> Sony </item>
        <item> Huawei </item>
        <item> Apple </item>
        <item> One Plus </item>
        <item> Dell </item>
        <item> Oppo </item>
        <item> Vivo </item>
        <item> Nokia </item>
        <item> Thoshiba </item>
        <item> Skyworth </item>
        <item> Singer </item>
    </string-array>
    <string name="title_activity_customer_rating">Customer Rating</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_update_customer">Update Customer</string>
    <string name="title_activity_edit_order">Edit Order</string>
    <string name="title_activity_order_details">Order Details</string>
    <string name="title_activity_payment_detail">Payment Detail</string>
    <string name="title_activity_rating_details">Rating Details</string>
</resources>
